prevent clipping of form on mobile

--- a/public/styles/cards/all.css
+++ b/public/styles/cards/all.css
@@ -93,11 +93,6 @@
     -webkit-transition: opacity 500ms;
     transition: opacity 500ms;
   }
-  .card-content > *:not(.card-title) {
-    background-color: rgba(255, 255, 255, 0);
-    -webkit-transition: background-color 250ms;
-    transition: background-color 250ms;
-  }
   .card:hover .card-title::before,
   .card:focus-within .card-title::before {
     -webkit-transform: scaleX(100%);
