--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -546,6 +546,7 @@ a:hover {
   height: 50%;
   background-color: #272d3a;
   padding: 3em;
+  padding-bottom: 120px;
 }
 
 @media screen and (max-width: 800px) {
